--- a/MuonGeneration/CMakeLists.txt
+++ b/MuonGeneration/CMakeLists.txt
@@ -33,10 +33,6 @@ file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.hh)
 #----------------------------------------------------------------------------
 # Add the executable, and link it to the Geant4 libraries
 #
-set(CRY_LIB "$ENV{G4WORKDIR}/cry/cry_v1.7/lib/libCRY.a")
-find_library(CRY_LIB CRY $ENV{CRY_LIB_PATH})
-include_directories("$ENV{G4WORKDIR}/cry/cry_v1.7/src/")
-
 set(B2G4_LOADER_LIB "$ENV{G4WORKDIR}/b2g4-loader/app/build/extern/b2g4/libb2g4-loader.a")
 find_library(B2G4_LOADER_LIB CRY $ENV{B2G4_LOADER_LIB_PATH})
 include_directories("$ENV{G4WORKDIR}/b2g4-loader/app/extern/b2g4/src/")
@@ -53,7 +49,7 @@ include_directories("$ENV{JSONCPPDIR}/include/")
 add_executable(Generator Generator.cc ${sources} ${headers})
 #target_link_libraries(Generator ${Geant4_LIBRARIES} ${CRY_LIB})
 #target_link_libraries(Generator ${Geant4_LIBRARIES} jsoncpp ${CRY_LIB})
-target_link_libraries(Generator ${Geant4_LIBRARIES} ${JSONCPP_LIB} ${CRY_LIB} ${B2G4_LOADER_LIB})
+target_link_libraries(Generator ${Geant4_LIBRARIES} ${JSONCPP_LIB} ${B2G4_LOADER_LIB})
 #----------------------------------------------------------------------------
 # Copy all scripts to the build directory, i.e. the directory in which we
 # build B1. This is so that we can run the executable directly because it
